# Medical-RAG-Chatbot

./: .gitignore  Dockerfile  Jenkinsfile  pyproject.toml  requirements.txt  setup.py
app/: application.py
app/components/: data_loader.py  embeddings.py  llm.py  pdf_loader.py  retriever.py  vector_store.py
app/config/: config.py
app/templates/: index.html
custom_jenkins/: Dockerfile
